--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
         <section id="sobre">
             <h2><i class="fas fa-user"></i> Sobre Mim</h2>
             <img src="imagens/perfil.jpg.JPG" alt="Minha foto de perfil" class="perfil-img">
-                <p>Olá! Meu nome é Paulo Rodrigo. Sou apaixonado(a) por Tecnologia, Curso Analise e Desenvolvimento de Sistemas, No momento Estou no 4º Período da Graduação. Sempre Busco Aprender Coisas Novas!</p>
+                <p>Olá! Meu nome é Paulo Rodrigo</p>
+<p>Curso Analise e Desenvolvimento de Sistemas, No momento Estou no 4º Período da Graduação. Sou dedicado, curioso e sempre motivado a aprender novas tecnologias e aprimorar minhas habilidades em desenvolvimento web.</p>
+<p>Atualmente estou em constante evolução nos estudos de **HTML**, **CSS** e **JavaScript**, desenvolvendo projetos que unem criatividade, funcionalidade e um código limpo.</p>
+<p>Tenho facilidade em resolver problemas, gosto de trabalhar com lógica e estou sempre em busca de soluções eficientes e práticas.</p>
+<p>Meu foco é criar interfaces agradáveis e funcionais, com atenção especial ao design responsivo e à experiência do usuário.!</p>
+        <h3>💡 Habilidades em desenvolvimento:</h3>
+            <ul>
+        <li>Estruturação de páginas com HTML5</li>
+        <li>Estilização moderna com CSS3</li>
+        <li>Lógica de programação com JavaScript</li>
+        <li>Controle de versões com Git e GitHub</li>
+    </ul>
+    <h3>🚀 Próximos passos:</h3>
+    <p>Pretendo aprofundar meus conhecimentos em <strong>Analise de Sistemas</strong>, <strong>React</strong>, <strong>Node.js</strong>, <strong>UX/UI Design</strong> e em metodologias ágeis para desenvolvimento de software.</p>
+    <p>📩 Para contato ou parcerias, confira minhas redes no final da página.</p>
         </section>
 
         <section id="projetos">
