--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <section id="sobre">
             <h2><i class="fas fa-user"></i> Sobre Mim</h2>
             <img src="imagens/perfil.jpg.JPG" alt="Minha foto de perfil" class="perfil-img">
-                <p>Olá! Meu nome é Paulo Rodrigo</p>
-<p>Curso Analise e Desenvolvimento de Sistemas, No momento Estou no 4º Período da Graduação. Sou dedicado, curioso e sempre motivado a aprender novas tecnologias e aprimorar minhas habilidades em desenvolvimento web.</p>
-<p>Atualmente estou em constante evolução nos estudos de **HTML**, **CSS** e **JavaScript**, desenvolvendo projetos que unem criatividade, funcionalidade e um código limpo.</p>
+                <p>Olá! Meu nome é <strong>Paulo Rodrigo</strong></p>
+<p>Curso <strong>Analise e Desenvolvimento de Sistemas</strong>, No momento Estou no 4º Período da Graduação. Sou dedicado, curioso e sempre motivado a aprender novas tecnologias e aprimorar minhas habilidades em desenvolvimento web.</p>
+<p>Atualmente estou em constante evolução nos estudos de <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>, desenvolvendo projetos que unem criatividade, funcionalidade e um código limpo.</p>
 <p>Tenho facilidade em resolver problemas, gosto de trabalhar com lógica e estou sempre em busca de soluções eficientes e práticas.</p>
 <p>Meu foco é criar interfaces agradáveis e funcionais, com atenção especial ao design responsivo e à experiência do usuário.!</p>
         <h3>💡 Habilidades em desenvolvimento:</h3>
